public/stylesheets/application.css
a:link, a.new-link {
	color: #479492;
	}
a:hover, a:focus {
	color: #da5936;
	}
body {
	background: #fee9aa;
	}
button, input[type=button], input.button, .button, a.button {
	background: #f3951d;
	border: 0 solid #f3951d;
	color: #fff;
	font: 12px/1 arial, helvetica, sans-serif;
	padding: 4px 14px;
	background: -webkit-gradient(linear, left top, left bottom, from(#f3951d), to(#ec6e0d));
	background: -moz-linear-gradient(top,  #f3951d,  #ec6e0d);
	-moz-border-radius: 12px;
	-webkit-border-radius: 12px;
	border-radius: 12px;
	}
	button:hover, input[type=button]:hover, .button:hover, a.button:hover {
		background: #F3951d;
		background: -webkit-gradient(linear, left top, left bottom, from(#f3951d), to(#dd6e0d));
		background: -moz-linear-gradient(top,  #f3951d,  #dd6e0d);
		}
a.button {
	display: inline-block;
	margin-top: 1em;
	margin-bottom: 1em;
}
.correct {
  color: #75a643;
	}
.error-messages { color: #900024; }
.error-messages h2 { color: #900024; }
.flash.notice {
	background: #3a878b;
	}
.page-header .navigation li {
	color: #3f3f3f;
	font-size: 1.2em;
	}
.page-header .navigation a:link, .page-header .navigation a:visited {
	color: #3a878b;
	}
.header {
	background: #8cbbb8;
	-webkit-border-top-left-radius: 13px;
	-webkit-border-top-right-radius: 13px;
	-moz-border-radius-topleft: 13px;
	-moz-border-radius-topright: 13px;
	border-top-left-radius: 13px;
	border-top-right-radius: 13px;
	}
	h1.app-name {
		background: url(../images/smartgraphs-logo.png) no-repeat 30px 10px;
		font: normal 36px arial, helvetica, sans-serif;
		height: 55px;
		padding: 65px 0 0 90px;
		}
.page-header .navigation.main-nav a {
	background: #c5e2e1;
	color: #68aeac;
	text-transform:capitalize;
	-webkit-border-top-left-radius: 8px;
	-webkit-border-top-right-radius: 8px;
	-moz-border-radius-topleft: 8px;
	-moz-border-radius-topright: 8px;
	border-top-left-radius: 8px;
	border-top-right-radius: 8px;
	}
.page-header .navigation.main-nav a:hover {
	background: #3a878b;
	border: none;
	color: #fff;
	}
.page-header .navigation.main-nav li.current a {
	background: #3a878b;
	border: none;
	color: #fff;
	}
.front-page .content {
	min-height: 400px;
	}
.section, .front-page .welcome-message {
	background: #fff !important;
	border: none !important;
	padding-bottom: 20px;
	-webkit-border-bottom-left-radius: 13px;
	-webkit-border-bottom-right-radius: 13px;
	-moz-border-radius-bottomleft: 13px;
	-moz-border-radius-bottomright: 13px;
	border-bottom-left-radius: 13px;
	border-bottom-right-radius: 13px;
	}
.front-page .welcome-message {
	float: left;
	width: 600px;
	}
	.front-page .welcome-message li, .front-page .welcome-message p {
		margin-bottom: 1em;
		}
	.activities-preview li {
		float: left;
		list-style: none;
		margin: 0;
		padding: 0;
		width: 200px;
		}
		.activities-preview li a {
			background: #fff !important;
			border: none !important;
			color: #479492;
			display: block;
			font-weight: bold;
			text-decoration: none !important;
			}
			.activities-preview li a:hover, .activities-preview li a:focus {
				color: #da5936;
				}
		.activities-preview li img {
			clear: both;
			width: 190px;
			}
	.content-header {
		background: #fff;
		border: none !important;
		padding: 5px 0 0;
		-webkit-border-bottom-left-radius: 13px;
		-webkit-border-bottom-right-radius: 13px;
		-moz-border-radius-bottomleft: 13px;
		-moz-border-radius-bottomright: 13px;
		border-bottom-left-radius: 13px;
		border-bottom-right-radius: 13px;
		}
		.section .card .header {
			background: transparent;
			}
		.content-header h1 , .content-header h2.heading {
			color: #3a878b;
			text-transform: capitalize;
			}
.sidebar-right {
	float: right;
	width: 255px;
	}
	.sidebar-right .callout {
		background: #fee9aa !important;
		margin-bottom: .75em;
		padding: 15px;
		-webkit-border-radius: 13px;
		-webkit-border-radius: 13px;
		-moz-border-radius: 13px;
		-moz-border-radius: 13px;
		border-radius: 13px;
		border-radius: 13px;
		}
	.sidebar-right .callout a.button {
		font-size: 1.2em;
		margin-bottom: 5px;
		padding: 10px;
		text-align: center;
		width: 205px;
		}
	.sidebar-right .callout h2 {
		color: #3a878b;
		line-height: 130%;
		margin: 0;
		}
	.sidebar-right .nav-links {
		margin: 0;
		padding: 0;
		}
		.sidebar-right .nav-links li {
			border-bottom: dotted 1px #ccc;
			list-style: none;
			margin-left: 0;
			}
		.sidebar-right .nav-links li:last-child {
			border-bottom: none;
			}
			.sidebar-right .nav-links li a {
				background: transparent !important;
				color: #479492 !important;
				display: block;
				padding: 10px 5px;
				}
			.sidebar-right .nav-links li a:hover {
				background: #fef7e0 !important;
				color: #da5936 !important;
				}

#copyright {
	clear: left;
	color: #3f3f3f;
	float: left;
	font-size: 11px;
	text-align: left;
	width: 40%;
	}
#nsf {
	background: url(../images/nsf-logo.png) no-repeat right 3px;
	clear: right;
	color: #3f3f3f;
	float: right;
	font-size: 11px;
	padding-right: 50px;
	text-align: left;
	width: 40%;
	}
#admin-links {
	clear: both;
	}

.inventory {
  color: #000;
}

.category_tag {
	font-weight: bold;
	margin-left: 1.5em;
	/*margin-right: 1.5em;*/
}
.searchBox {
	/*background-color: whiteSmoke;*/
	border: 2px solid whiteSmoke;
	padding: 1em;
	padding-top: 0;
}
.smallwhite a {
	color: white;
}
.checklistArea {
	clear: none;
	display: inline-block;
	margin-right: 1em;
	margin-left: 1em;
	padding: 0.5em;
	vertical-align: top;
	}
	.searchBox h4 {
		font-size: 12px;
		text-decoration: underline;
		font-weight: bold;
	}
	.searchBox .nameSearch {
		margin-right: 2em;
		font-weight: bold;
	}
	.searchBox .searchHeading {
		text-decoration: underline;
	}
	.searchBox form {
		clear: none;
		display: inline-block;
	}
	.searchBox .nameSearch {
		clear: none;
		display: inline-block;
	}
	
	.searchBox .checkList {
		clear: none;
		display: inline-block;
		list-style: none;
		}
		.checkList .checkItem {
			margin: 0;
		}

.top-actions {
  float: right;
  margin-bottom: 12px;
  clear: both;
}
.bottom-actions {
  float: right;
  margin-bottom: 12px;
  clear: both;
}
#page_pane_ordering {
  clear: both;
}

